Fixed "only_staff" flag for the "Administration" menu.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@231 71535020-02ba-11df-897e-95fb7fca2173

--- a/core/menus/fixtures/initial_data.yaml
+++ b/core/menus/fixtures/initial_data.yaml
@@ -13,5 +13,5 @@
     url: "/admin"
     sort_order: 0
     only_authenticated: True
-    only_staff: False
+    only_staff: True
     only_with_perms: []
