- Improved sidebar: it's now based on dynamic widgets. - Added widget with the user profile to the sidebar. - Improved CSS and layout.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@234 71535020-02ba-11df-897e-95fb7fca2173

--- a/core/auth/fixtures/initial_data.yaml
+++ b/core/auth/fixtures/initial_data.yaml
@@ -44,3 +44,15 @@
     only_authenticated: True
     only_staff: False
     only_with_perms: []
+- model: widgets.widget
+  pk: 3
+  fields:
+    region: 2
+    title: "User Profile"
+    slug: "user-profile"
+    description: "The user's profile."
+    source: "prometeo.core.widgets.base.dummy"
+    template: "widgets/user_profile.html"
+    context: ""
+    show_title: false
+    sort_order: 0
