--- a/core/widgets/fixtures/initial_data.yaml
+++ b/core/widgets/fixtures/initial_data.yaml
@@ -3,6 +3,11 @@
   fields:
     slug: "footer"
     description: "Footer"
+- model: widgets.region
+  pk: 2
+  fields:
+    slug: "sidebar"
+    description: "Sidebar"
 - model: widgets.widget
   pk: 1
   fields:
@@ -11,7 +16,7 @@
     slug: "powered-by"
     description: "Info about Prometeo."
     source: "prometeo.core.widgets.base.dummy"
-    template: "elements/powered-by.html"
+    template: "widgets/powered-by.html"
     context: "{\"text\": \"Prometeo\", \"url\": \"http://code.google.com/p/prometeo-erp/\"}"
     show_title: false
     sort_order: 0
