--- a/core/auth/fixtures/initial_data.yaml
+++ b/core/auth/fixtures/initial_data.yaml
@@ -52,7 +52,7 @@
     slug: "user-profile"
     description: "The user's profile."
     source: "prometeo.core.widgets.base.dummy"
-    template: "widgets/user_profile.html"
+    template: "auth/widgets/user_profile.html"
     context: ""
     show_title: false
     sort_order: 0
