Added "dashboard" link in the main menu.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@291 71535020-02ba-11df-897e-95fb7fca2173

--- a/core/menus/fixtures/initial_data.yaml
+++ b/core/menus/fixtures/initial_data.yaml
@@ -7,11 +7,23 @@
   pk: 1
   fields:
     menu: 2
+    title: "Dashboard"
+    slug: "dashboard"
+    description: "Personal dashboard."
+    url: "/"
+    sort_order: 0
+    only_authenticated: True
+    only_staff: False
+    only_with_perms: []
+- model: menus.link
+  pk: 2
+  fields:
+    menu: 2
     title: "Administration"
     slug: "administration"
     description: "Administration panel."
     url: "/admin"
-    sort_order: 0
+    sort_order: 1
     only_authenticated: True
     only_staff: True
     only_with_perms: []
